# ceda-django-oidc

./: .gitignore  README.md  pyproject.toml  setup.py
oidc_auth/: __init__.py  backends.py  middleware.py  urls.py  utils.py  views.py
oidc_backend/: __init__.py  auth.py
